--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -11,6 +11,10 @@
           <a class="nav-link" href="/contacto/index">Cadastrar Contacto</a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="">Cadastrar Eventos</a>
+        </li>
+
         <% if(user){ %>
           <li class="nav-item">
             <a class="nav-link" href="/login/logout">Sair</a>
