--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -11,6 +11,10 @@
           <li class="nav-item">
             <a class="nav-link" href="/contacto/index">Cadastrar Contacto</a>
           </li>
+        <% }else{ %>
+          <li class="nav-item">
+            <a class="nav-link" href="">Vá Cadastrar</a>
+          </li>
         <% } %>
 
         <% if(user){ %>
