--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -7,10 +7,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
 
+        <% if(user){ %>
         <li class="nav-item">
           <a class="nav-link" href="/contacto/index">Cadastrar Contacto</a>
         </li>
-
+        <% } %>
+        
         <li class="nav-item">
           <a class="nav-link" href="">Cadastrar Eventos</a>
         </li>
